<resources>
    <string name="app_name">GymnastLink</string>
    <string name="updates">Updates</string>
    <string name="workouts">Workouts</string>
    <string name="nutrition">Nutrition</string>
    <string name="profile">Profile</string>
    <string name="exercise_details">Exercise Details</string>
    <string name="post_image_description">image included in post</string>
    <string name="new_post_fab_description">add new post</string>
    <string name="new_post_text">New Post</string>
    <string name="post_title_hint">Enter post title…</string>
    <string name="post_content_hint">Enter post content…</string>
    <string name="upload_image_text">Upload Image</string>
    <string name="post_picture_description">post_uploaded_picture</string>
    <string name="save_new_post_description">save new post</string>
    <string name="remove_image_text">Remove Image</string>
    <string name="new_post_fab_text">New Post</string>
    <string name="temp_exercise_title">Exercise title</string>
    <string name="temp_body_part">Body part</string>
    <string name="search_introduction">Use our providers to find your exercise</string>
    <string name="search_exercise_hint">Search for an exercise</string>
    <string name="search_results">Search Results</string>
    <string name="my_plan_header">My Plan</string>
    <string name="add_new_comment">Add new comment</string>
    <string name="comments">Comments</string>
    <string name="edit">Edit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_post">Edit Post</string>
    <string name="user_posts">User Posts</string>
    <string name="save">Save</string>
    <string name="cm_unit">cm</string>
    <string name="kg_unit">kg</string>
    <string name="gender_title">Gender:</string>
    <string name="age_title">Age:</string>
    <string name="weight_title">Weight:</string>
    <string name="height_title">Height:</string>
    <string name="placeholder">__</string>
    <string name="your_title">Your title</string>
    <string name="username">username</string>"
    <string name="muscle_format">Muscle: %s</string>
    <string name="equipment_format">Equipment: %s</string>
    <string name="app_phrase">Another reason to work out</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="logout">Logout</string>
    <string name="authentication_succeeded">Authentication succeeded</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="registered_successfully">registered successfully</string>
</resources>