<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.LoginActivity">

    <TextView
        android:id="@+id/loginAppLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/app_name"
        android:textSize="50dp"
        android:textColor="@color/light_blue"
        android:gravity="center"/>

    <TextView
        android:id="@+id/LoginAppPhrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_phrase"
        android:textSize="22dp"
        android:textColor="@color/light_blue"
        android:gravity="center"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/login_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/input_background"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_background_blue"
        android:orientation="vertical">

            <EditText
                android:id="@+id/loginMailTextEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:background="@drawable/input_background"
                android:fontFamily="@font/cairo"
                android:gravity="center_vertical"
                android:padding="6dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:hint="@string/email_hint"
                android:textColorHint="@color/white"/>

            <EditText
                android:id="@+id/loginPasswordTextEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="@drawable/input_background"
                android:fontFamily="@font/cairo"
                android:gravity="center_vertical"
                android:padding="6dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:inputType="textPassword"
                android:hint="@string/password_hint"
                android:textColorHint="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@color/black"
                android:text="@string/login"
                android:textColor="@color/white"
                app:icon="@drawable/ic_login"
                app:iconGravity="textStart"
                app:iconPadding="4dp"
                app:iconTint="@android:color/white"/>

            <Button
                android:id="@+id/registerButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@color/light_blue"
                android:text="@string/register"
                android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>