<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.RegisterActivity">

    <TextView
        android:id="@+id/registerAppLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/app_name"
        android:textSize="50dp"
        android:textColor="@color/card_cyan_background"
        android:gravity="center"/>

    <TextView
        android:id="@+id/registerAppPhrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_phrase"
        android:textSize="22dp"
        android:textColor="@color/card_cyan_background"
        android:gravity="center"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/register_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/input_background"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/card_cyan_background"
            android:orientation="vertical">

            <EditText
                android:id="@+id/registerMailTextEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:background="@drawable/input_background"
                android:fontFamily="@font/cairo"
                android:gravity="center_vertical"
                android:padding="6dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:hint="@string/email_hint"
                android:textColorHint="@color/white"/>

            <EditText
                android:id="@+id/registerPasswordTextEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="@drawable/input_background"
                android:fontFamily="@font/cairo"
                android:gravity="center_vertical"
                android:padding="6dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:inputType="textPassword"
                android:hint="@string/password_hint"
                android:textColorHint="@color/white"/>

            <Button
                android:id="@+id/signInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/cyan_button"
                android:text="@string/sign_in"
                android:textColor="@color/white"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>