<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ProfileFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/profile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/profile"
                android:textSize="22sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/profile_user_avatar"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:background="@drawable/profile_pic_placeholder"
                    android:scaleType="centerCrop"
                    app:shapeAppearanceOverlay="@style/CircleImageView" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="24dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/profile_user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:fontFamily="@font/cairo_bold"
                        android:hint="@string/username"
                        android:inputType="text"
                        android:textColor="@color/user_details_font"
                        android:textSize="32sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/profile_user_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:fontFamily="@font/cairo"
                        android:hint="@string/your_title"
                        android:inputType="text"
                        android:textColor="@color/user_details_font"
                        android:textSize="24sp" />
                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/profile_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/input_background"
                app:cardBackgroundColor="@color/profile_info_card_background"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipChildren="false"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/age_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="4dp"
                                android:fontFamily="@font/cairo_bold"
                                android:text="@string/age_title"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/age_edit_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@null"
                                android:fontFamily="@font/cairo_bold"
                                android:hint="@string/placeholder"
                                android:inputType="numberDecimal"
                                android:textColor="@android:color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/gender_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="4dp"
                                android:fontFamily="@font/cairo_bold"
                                android:text="@string/gender_title"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/gender_edit_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@null"
                                android:fontFamily="@font/cairo_bold"
                                android:hint="@string/placeholder"
                                android:inputType="text"
                                android:textColor="@android:color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/weight_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="4dp"
                                android:fontFamily="@font/cairo_bold"
                                android:text="@string/weight_title"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/weight_edit_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@null"
                                android:fontFamily="@font/cairo_bold"
                                android:hint="@string/placeholder"
                                android:inputType="numberDecimal"
                                android:textColor="@android:color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="4dp"
                                android:fontFamily="@font/cairo_bold"
                                android:text="@string/kg_unit"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/height_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="4dp"
                                android:fontFamily="@font/cairo_bold"
                                android:text="@string/height_title"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/height_edit_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@null"
                                android:fontFamily="@font/cairo_bold"
                                android:hint="@string/placeholder"
                                android:inputType="numberDecimal"
                                android:textColor="@android:color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="4dp"
                                android:fontFamily="@font/cairo_bold"
                                android:text="@string/cm_unit"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>


                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.example.gymnastlink.ui.components.RecyclerWithTitleView
                android:id="@+id/user_posts_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/edit_profile_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/edit_profile"
        app:icon="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/save_profile_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/save"
        android:visibility="gone"
        app:backgroundTint="@color/cyan_button"
        app:icon="@drawable/ic_done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/fab_icon_color" />

</androidx.constraintlayout.widget.ConstraintLayout>
